[gd_scene load_steps=11 format=3 uid="uid://bwmacxuveckv1"]

[ext_resource type="Script" uid="uid://2oqla3xoti0v" path="res://scripts/game_script.gd" id="1_iywne"]
[ext_resource type="Shader" uid="uid://k8gkbgyhygg0" path="res://visual_assets/scrolling_background.gdshader" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://cbkmcqpbgv7c8" path="res://visual_assets/bg_01.png" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c71gjn10jvn65" path="res://scenes/comet_spawner.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://cwkjpvfobul02" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://chkk7n4304unv" path="res://scenes/pause_menu.tscn" id="6_p57ef"]
[ext_resource type="AudioStream" uid="uid://b67kdk87ppyk4" path="res://visual_assets/sounds/space_theme.ogg" id="7_0tnpc"]
[ext_resource type="AudioStream" uid="uid://cyjcsn8qfuy81" path="res://visual_assets/sounds/game_over.ogg" id="8_0tnpc"]
[ext_resource type="FontFile" uid="uid://bjsta0phwk7f5" path="res://visual_assets/fonts/8bit_wonder/8-BIT WONDER.TTF" id="8_gee14"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iywne"]
shader = ExtResource("1_lbhrr")
shader_parameter/direction = Vector2(0, -1)
shader_parameter/speed_scale = 0.5

[node name="Game" type="Node2D"]
script = ExtResource("1_iywne")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_iywne")
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lbhrr")
centered = false
offset = Vector2(-275, -15)
region_rect = Rect2(0, 0, 1300, 740)

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(615, 656)

[node name="Comet_spawner" parent="." instance=ExtResource("2_lnu2h")]

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0tnpc")
volume_db = -12.0
autoplay = true
parameters/looping = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_0tnpc")
volume_db = -5.0

[node name="game_over_label" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 181.0
offset_top = 193.0
offset_right = 1081.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("8_gee14")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart_label" type="Label" parent="game_over_label"]
layout_mode = 0
offset_left = 140.0
offset_top = 116.0
offset_right = 755.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("8_gee14")
theme_override_font_sizes/font_size = 30
text = "Press space to restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource("6_p57ef")]
visible = false

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
